--- a/base/src/main/res/layout/all_review_list_item.xml
+++ b/base/src/main/res/layout/all_review_list_item.xml
@@ -63,7 +63,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/cairoregular"
                 android:maxLines="2"
                 android:text="@{review_list.reviewerName}"
                 android:textSize="15sp"
@@ -77,7 +77,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="@font/roboto_light"
+                android:fontFamily="@font/cairoregular"
                 android:text="@{review_list.reviewTitle}"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -91,7 +91,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="@font/roboto_light"
+                android:fontFamily="@font/cairoregular"
                 android:text="@{review_list.content}"
                 android:textSize="14sp"
 
