--- a/base/src/main/res/layout/custom_variant_listitem.xml
+++ b/base/src/main/res/layout/custom_variant_listitem.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:gravity="center"
             android:maxLines="2"
             android:text="@{varaint_data.selectedoption_one}"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:gravity="center"
             android:maxLines="2"
             android:text="@{varaint_data.selectedoption_two}"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:gravity="center"
             android:maxLines="2"
             android:text="@{varaint_data.selectedoption_three}"
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
