--- a/base/src/main/res/layout/language_item.xml
+++ b/base/src/main/res/layout/language_item.xml
@@ -13,7 +13,7 @@
             android:id="@+id/language_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:padding="8dp"
             android:textAllCaps="true"
             android:textSize="12sp"
