--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -113,7 +113,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/cairoregular"
                             android:text="@string/local_delivery"
                             android:textAlignment="center"
                             android:textSize="@dimen/_10ssp"
@@ -148,7 +148,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/cairoregular"
                             android:text="@string/pick_up_in_store"
                             android:textAlignment="center"
                             android:textSize="@dimen/_10ssp"
@@ -167,7 +167,7 @@
                             android:id="@+id/deliver_area_txt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_bold"
+                            android:fontFamily="@font/cairobold"
                          android:visibility="gone"
                             android:text="@string/please_enter_your_postal_code_to_find_out_if_we_deliver_to_this_area"
                             android:textSize="@dimen/_12ssp"
@@ -179,7 +179,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_10sdp"
                             android:background="@drawable/round_corner_lightgray"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/cairoregular"
                             android:gravity="center"
                             android:onClick="@{(view)->handler.deliveryDatePicker()}"
                             android:padding="@dimen/_8sdp"
