--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -394,7 +394,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/rect_drawable"
-                android:fontFamily="@font/normal"
+                android:fontFamily="@font/cairoregular"
                 android:gravity="center"
                 android:onClick="@{view->clickhandlers.shareProduct(view,productdata)}"
                 android:padding="4dp"
@@ -475,7 +475,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{view->clickhandlers.viewAllReview(view)}"
                     android:text="@string/view_all"
                     android:textColor="@android:color/holo_blue_dark"
@@ -510,7 +510,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{(view) -> clickhandlers.rateProduct(view,productdata)}"
                     android:padding="8dp"
                     android:text="@string/rate_product"
@@ -525,7 +525,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto_light"
+                    android:fontFamily="@font/cairobold"
                     android:text="@string/sorry_this_product_does_not_have_any_reviews"
                     android:textSize="12sp"
                     bind:layout_constraintEnd_toEndOf="parent"
@@ -561,7 +561,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{view->clickhandlers.viewAllJudgeMeReview(view)}"
                     android:text="@string/view_all"
                     android:textColor="@android:color/holo_blue_dark"
@@ -596,7 +596,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{(view) -> clickhandlers.rateProductJudgeMe(view,productdata)}"
                     android:padding="8dp"
                     android:text="@string/rate_product"
@@ -611,7 +611,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto_light"
+                    android:fontFamily="@font/cairoregular"
                     android:text="@string/sorry_this_product_does_not_have_any_reviews"
                     android:textSize="12sp"
                     bind:layout_constraintEnd_toEndOf="parent"
@@ -648,7 +648,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{view->clickhandlers.viewAllAliReview(view)}"
                     android:text="@string/view_all"
                     android:textColor="@android:color/holo_blue_dark"
@@ -683,7 +683,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/cairobold"
                     android:onClick="@{(view) -> clickhandlers.rateProductJudgeMe(view,productdata)}"
                     android:padding="8dp"
                     android:text="@string/rate_product"
@@ -699,7 +699,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto_light"
+                    android:fontFamily="@font/cairoregular"
                     android:text="@string/sorry_this_product_does_not_have_any_reviews"
                     android:textSize="12sp"
                     bind:layout_constraintEnd_toEndOf="parent"
