--- a/base/src/main/res/layout/optionmenu_dialog.xml
+++ b/base/src/main/res/layout/optionmenu_dialog.xml
@@ -53,7 +53,7 @@
                         android:layout_height="20dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="3dp"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/cairobold"
                         android:text="@string/my_favorite"
                         android:textAllCaps="true"
                         android:textColor="@color/main_color_gray_lt"
@@ -93,7 +93,7 @@
                         android:layout_height="20dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="22dp"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/cairobold"
                         android:text="@string/share_this"
                         android:textAllCaps="true"
                         android:textColor="@color/main_color_gray_lt"
@@ -134,7 +134,7 @@
                         android:layout_height="20dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="22dp"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/cairobold"
                         android:text="@string/close"
                         android:textAllCaps="true"
                         android:textColor="@color/main_color_gray_lt"
