--- a/base/src/main/res/layout/activity_quick_add.xml
+++ b/base/src/main/res/layout/activity_quick_add.xml
@@ -106,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:gravity="center"
             android:onClick="@{view->handler.addcart(view)}"
             android:text="@string/addtocart"
