--- a/base/src/main/res/layout/discount_code_layout.xml
+++ b/base/src/main/res/layout/discount_code_layout.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/dialog_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/cairobold"
                 android:gravity="center"
                 android:text="@string/want_to_apply_discount_code"
                 android:textSize="16sp"
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/cairoregular"
                 android:gravity="center"
                 android:text="@string/you_can_apply_discount_code_here"
                 android:textSize="12sp"
