--- a/base/src/main/res/layout/m_cartitem.xml
+++ b/base/src/main/res/layout/m_cartitem.xml
@@ -206,7 +206,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/cairobold"
                 android:text="@string/the_product_is_currently_not_in_stock"
                 android:textColor="@color/red"
                 android:textSize="12sp"
