--- a/base/src/main/res/layout/m_splash.xml
+++ b/base/src/main/res/layout/m_splash.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:text="@string/loading"
             android:textSize="12sp"
             android:visibility="@{commonmodel.imageurl == null ? View.VISIBLE : View.GONE}"
