--- a/base/src/main/res/layout/product_list_item.xml
+++ b/base/src/main/res/layout/product_list_item.xml
@@ -61,7 +61,7 @@
             android:layout_marginStart="7dp"
             android:layout_marginBottom="10dp"
             android:background="@color/red"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/cairobold"
             android:padding="5dp"
             android:text="@string/out_of_stock"
             android:textAllCaps="true"
