--- a/base/src/main/res/layout/review_list_item.xml
+++ b/base/src/main/res/layout/review_list_item.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textSize="14sp"
+                android:fontFamily="@font/cairoregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +64,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/cairoregular"
             android:maxLines="2"
             android:text="@{review_list.reviewerName}"
             android:textSize="15sp"
@@ -77,7 +78,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="10dp"
-            android:fontFamily="@font/roboto_light"
+            android:fontFamily="@font/cairoregular"
             android:text="@{review_list.reviewTitle}"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -92,7 +93,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:ellipsize="end"
-            android:fontFamily="@font/roboto_light"
+            android:fontFamily="@font/cairoregular"
             android:maxLines="4"
             android:text="@{review_list.content}"
             android:textSize="14sp"
@@ -104,6 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/cairoregular"
             android:text="@{review_list.reviewDate}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/reviewer_name" />
