--- a/base/src/main/res/layout/m_leftmenufragment.xml
+++ b/base/src/main/res/layout/m_leftmenufragment.xml
@@ -309,7 +309,7 @@
                 app:texttype="normal" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:visibility="gone"
+                android:visibility="@{features.tidioChat ? View.VISIBLE : View.GONE}"
                 android:id="@+id/chat_but"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
@@ -325,7 +325,7 @@
                 app:texttype="normal" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:visibility="gone"
+                android:visibility="@{features.smileIO ? View.VISIBLE : View.GONE}"
                 android:id="@+id/smilereward_but"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
