--- a/base/src/main/res/layout/m_newbaseactivity.xml
+++ b/base/src/main/res/layout/m_newbaseactivity.xml
@@ -155,7 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Help"
+                android:text="@string/help"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
