--- a/base/src/main/res/layout/m_trial.xml
+++ b/base/src/main/res/layout/m_trial.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ececf4"
     >
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/image"
         android:src="@drawable/trial_image"
+       android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
