--- a/base/src/main/res/layout/m_newbaseactivity.xml
+++ b/base/src/main/res/layout/m_newbaseactivity.xml
@@ -134,6 +134,7 @@
             android:background="@drawable/chat_bg"
             android:paddingStart="20dp"
             android:paddingTop="8dp"
+            android:visibility="gone"
             android:paddingEnd="12dp"
             android:paddingBottom="8dp"
             android:translationZ="10dp"
