--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -24,7 +24,7 @@
             type="java.util.ArrayList" />
     </data>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -319,13 +319,110 @@
                 bind:layout_constraintTop_toBottomOf="@+id/variant_container"
                 bind:texttype="normal" />
 
+            <RelativeLayout
+
+                android:id="@+id/pickupsection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                bind:layout_constraintTop_toBottomOf="@id/variant_available_qty"
+                android:background="@drawable/pickupborder">
+
+                <ImageView
+                    android:id="@+id/checks"
+                    android:layout_width="30dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="5dp"
+                    android:src="@drawable/checkmark"/>
+
+                <TextView
+                    android:id="@+id/heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/checks"
+                    android:paddingStart="3dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/pickupavailable"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/addfirst"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/heading"
+                    android:layout_marginTop="3dp"
+                    android:padding="5dp"
+                    android:text="address1"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/addsecond"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/addfirst"
+                    android:layout_marginTop="3dp"
+                    android:padding="5dp"
+                    android:text="address2"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_marginTop="3dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="pickup available"
+                    android:layout_below="@id/addsecond"
+                    android:id="@+id/pickuptime"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:padding="5dp"/>
+
+                <TextView
+                    android:layout_marginTop="3dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="phone number"
+                    android:layout_below="@id/pickuptime"
+                    android:id="@+id/phonenumber"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:padding="5dp"/>
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/checkstores"
+                android:id="@+id/checkstoretext"
+                bind:layout_constraintTop_toBottomOf="@id/pickupsection"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="3dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                bind:layout_constraintTop_toBottomOf="@id/checkstoretext"
+                android:orientation="vertical"
+                android:layout_marginTop="5dp"
+                android:id="@+id/storerecycler"/>
+
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/qty_title_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Quantity"
-                bind:layout_constraintTop_toBottomOf="@+id/variant_available_qty"
+                android:layout_marginTop="10dp"
+                bind:layout_constraintTop_toBottomOf="@+id/storerecycler"
                 bind:texttype="normal" />
 
             <LinearLayout
@@ -852,7 +949,7 @@
                     android:layoutAnimation="@anim/layout_animation"
                     bind:layout_behavior="@string/appbar_scrolling_view_behavior"
                     bind:layout_constraintBottom_toBottomOf="parent"
-                    bind:layout_constraintTop_toBottomOf="@id/personalisedyext"></androidx.recyclerview.widget.RecyclerView>
+                    bind:layout_constraintTop_toBottomOf="@id/personalisedyext"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -886,8 +983,8 @@
                     android:layoutAnimation="@anim/layout_animation"
                     bind:layout_behavior="@string/appbar_scrolling_view_behavior"
                     bind:layout_constraintBottom_toBottomOf="parent"
-                    bind:layout_constraintTop_toBottomOf="@id/shopifyrecommended_title"></androidx.recyclerview.widget.RecyclerView>
+                    bind:layout_constraintTop_toBottomOf="@id/shopifyrecommended_title"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </layout>
