--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -79,29 +79,25 @@
                     android:id="@+id/zepiet_section"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:visibility="gone"
+                    android:layout_margin="5dp"
+                    android:visibility="visible"
                     app:layout_constraintTop_toBottomOf="@+id/cartlist">
-
-
-
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/local_container"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/_80sdp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="@dimen/_5sdp"
-                        android:background="@drawable/black_border"
                         android:onClick="@{(view)->handler.localDeliveryClick(view)}"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_marginEnd="5dp"
+                        android:background="@drawable/black_border"
                         app:layout_constraintEnd_toStartOf="@+id/store_container"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/local_icon"
-                            android:layout_width="@dimen/_28sdp"
-                            android:layout_height="@dimen/_28sdp"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -112,11 +108,11 @@
                             android:id="@+id/local_txt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_5sdp"
-                            android:fontFamily="@font/cairoregular"
+                            android:layout_marginTop="5dp"
+                            android:fontFamily="@font/roboto_medium"
                             android:text="@string/local_delivery"
                             android:textAlignment="center"
-                            android:textSize="@dimen/_10ssp"
+                            android:textSize="10sp"
                             app:layout_constraintTop_toBottomOf="@+id/local_icon" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -124,19 +120,18 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/store_container"
                         android:layout_width="0dp"
-                        android:layout_height="@dimen/_80sdp"
-                        android:layout_marginStart="@dimen/_5sdp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/black_border"
+                        android:layout_height="80dp"
                         android:onClick="@{(view)->handler.storeDeliveryClick(view)}"
+                        android:layout_marginStart="5dp"
+                        android:background="@drawable/black_border"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/local_container"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/store_icon"
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -147,11 +142,11 @@
                             android:id="@+id/store_txt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_5sdp"
-                            android:fontFamily="@font/cairoregular"
+                            android:layout_marginTop="5dp"
+                            android:fontFamily="@font/roboto_medium"
                             android:text="@string/pick_up_in_store"
                             android:textAlignment="center"
-                            android:textSize="@dimen/_10ssp"
+                            android:textSize="10sp"
                             app:layout_constraintTop_toBottomOf="@+id/store_icon" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -159,7 +154,7 @@
                         android:id="@+id/delivery_option"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginTop="5dp"
                         android:visibility="visible"
                         app:layout_constraintTop_toBottomOf="@+id/local_container">
 
@@ -167,38 +162,91 @@
                             android:id="@+id/deliver_area_txt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/cairobold"
-                         android:visibility="gone"
+                            android:fontFamily="@font/roboto_bold"
                             android:text="@string/please_enter_your_postal_code_to_find_out_if_we_deliver_to_this_area"
-                            android:textSize="@dimen/_12ssp"
+                            android:textSize="12sp"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/delivery_date_txt"
+
+                        <LinearLayout
+                            android:id="@+id/zipcode"
+                            android:layout_marginTop="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:background="@drawable/border2"
+                            app:layout_constraintTop_toBottomOf="@id/deliver_area_txt"
+                            android:orientation="horizontal"
+                            android:weightSum="10">
+
+                            <EditText
+                                android:id="@+id/zipcodes"
+                                android:hint="Enter postal code here"
+                                android:textSize="14sp"
+                                android:textStyle="italic"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="9"
+                                android:background="@drawable/border1"
+                                android:paddingStart="10dp" />
+
+                            <ImageView
+                                android:id="@+id/searchpostalcode"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:onClick="@{view->handler.loadpincode(view)}"
+                                android:src="@drawable/search"
+                                app:tint="@color/main_color_gray_lt" />
+                        </LinearLayout>
+                        <TextView
+                            android:textSize="15sp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            app:layout_constraintTop_toBottomOf="@id/zipcode"
+                            android:id="@+id/pintext"
+                            android:text="Sorry, delivery is not available in your area at the moment."
+                            android:textColor="@color/red"
+                            android:visibility="gone"
+                            android:layout_marginStart="5dp"/>
+
+                        <TextView
+                            android:textSize="15sp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@id/pintext"
+                            android:id="@+id/pintextrue"
+                            android:text="Good news! We can deliver to you.."
+                            android:textColor="@color/black"
+                            android:visibility="gone"
+                            android:layout_marginStart="5dp"/>
+
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:visibility="gone"
+                            android:id="@+id/delivery_date_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="10dp"
                             android:background="@drawable/round_corner_lightgray"
-                            android:fontFamily="@font/cairoregular"
                             android:gravity="center"
                             android:onClick="@{(view)->handler.deliveryDatePicker()}"
-                            android:padding="@dimen/_8sdp"
+                            android:padding="8dp"
                             android:text="@string/click_here_to_select_delivery_date"
-                            android:textSize="@dimen/_12ssp"
-                            android:visibility="gone"
-                            app:layout_constraintTop_toBottomOf="@+id/deliver_area_txt" />
+                            android:textSize="15sp"
+                            app:layout_constraintTop_toBottomOf="@+id/pintextrue" />
 
                         <androidx.appcompat.widget.AppCompatSpinner
                             android:id="@+id/delivery_time_spn"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/_35sdp"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_height="35dp"
+                            android:layout_marginTop="10dp"
                             android:background="@drawable/round_corner_lightgray"
                             android:fontFamily="@font/roboto_bold"
                             android:gravity="center"
-                            android:textSize="@dimen/_12ssp"
+                            android:textSize="12sp"
                             android:visibility="gone"
                             app:layout_constraintTop_toBottomOf="@+id/delivery_date_txt" />
+
                         <androidx.appcompat.widget.AppCompatEditText
                             android:id="@+id/order_note_edt"
                             android:layout_width="match_parent"
@@ -217,17 +265,17 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:visibility="gone"
-                            app:layout_constraintTop_toBottomOf="@+id/delivery_time_spn">
+                            app:layout_constraintTop_toBottomOf="@+id/order_note_edt">
 
-                            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
                                 xmlns:tools="http://schemas.android.com/tools"
                                 android:id="@+id/store_map"
                                 android:name="com.google.android.gms.maps.SupportMapFragment"
                                 android:layout_width="match_parent"
-                                android:layout_height="@dimen/_200sdp"
-                                android:layout_marginTop="@dimen/_8sdp"
+                                android:layout_height="200dp"
+                                android:layout_marginTop="8dp"
                                 app:layout_constraintTop_toTopOf="parent"
-                                tools:context="com.shopify.shopifyapp.cartsection.activities.CartList" />
+                                tools:context="com.loafly.app.cartsection.activities.CartList" />-->
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -236,10 +284,9 @@
                             android:id="@+id/location_list"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginTop="5dp"
                             android:visibility="gone"
                             app:layout_constraintTop_toBottomOf="@+id/map_container" />
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
